#2 Setup Login Page UI and Fix its Responsiveness

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,17 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>SpeechDraft</title>
-  <base href="/">
+  <head>
+    <meta charset="utf-8">
+    <meta name="Description" content="Speech Draft: Angular 7 and NodeJS CRUD Speech Draft Application">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+    <title>SpeechDraft</title>
+    <base href="/">
+
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+  </head>
+
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
